--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body background="./CSS/Pictures/stock-photo-composition-with-to-do-list-on-white-background-1080053384.jpg" >
-    
+    <div class="container">
       <p>Are you messing up with your day-to-day activities!!! Let's us help you</p> 
       <a href="main.html">Login</a>
      
@@ -21,6 +21,7 @@
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
      <script src="/bootstrap.js"></script>
       <script src="script.js"></script> 
+    </div>
 </body>
 </div>
 </html>
