--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 <body background="./CSS/Pictures/images.jpg">
+  <div class="container">
   <h1> LogIn</h1>
     <form action="list.html" id="form" onsubmit =  "return submitter();">
       
@@ -49,5 +50,6 @@
   
           
       </script> 
+      </div>
 </body>
 </html>
