--- a/list.html
+++ b/list.html
@@ -18,7 +18,7 @@
 <!-- <form action="https://jsonplaceholder.typicode.com/todos" onsubmit="return ajax()"></form> -->
  
     
-<div class="col-6"> <a href="#" onclick="ajax();" >To Do List</a></div><br>
+<div class="col-6"> <a href="#" onclick="ajax();" >To Do List</a></div>
 <div class="col-6"> <a href="index.html">LogOut</a></div>
 
                 
