--- a/list.html
+++ b/list.html
@@ -19,7 +19,7 @@
  
     
 <div class="col-6"> <a href="#" onclick="ajax();" >To Do List</a></div>
-<div class="col-6"> <a href="index.html">LogOut</a></div>
+<!-- <div class="col-6"> <a href="index.html">LogOut</a></div> -->
 
                 
             <div id="head">
