--- a/list.html
+++ b/list.html
@@ -18,11 +18,11 @@
 <!-- <form action="https://jsonplaceholder.typicode.com/todos" onsubmit="return ajax()"></form> -->
  
     
-<div class="col-6"> <a href="#" onclick="ajax();" >To Do List</a></div>
+<div class="col-4"> <a href="#" onclick="ajax();" >To Do List</a></div>
 <br>
+<div class="col-4"><br></div>
 <br>
-<br>
-  <div class="col-6"> <a href="index.html">LogOut</a></div>   
+  <div class="col-4"> <a href="index.html">LogOut</a></div>   
  <!-- <a href="index.html">LogOut</a>  -->
                 
             <div id="head">
